# terminalmaze

./: .gitignore  aldousbroder.py  binary_tree.py  cell.py  grid.py  huntandkill.py  mazer.py  pyproject.toml  recursivebacktracker.py  sidewinder.py  terminal_grid.py  terminalmaze.py  wilsons.py
grid/: cell.py  grid.py
maze_algorithms/: aldousbroder.py  binarytree.py  ellers.py  huntandkill.py  kruskalsrandomized.py  primssimple.py  primsweighted.py  recursivebacktracker.py  sidewinder.py  wilsons.py
solve_algorithms/: breadthfirst.py
src/terminalmaze/: main.py
src/terminalmaze/algorithms/: algorithm.py
src/terminalmaze/algorithms/solve/: __init__.py  breadthfirst.py  greedybestfirst.py
src/terminalmaze/config/: __init__.py
src/terminalmaze/resources/: grid.py
src/terminalmaze/visual/: visualmaze.py
terminalmaze/algorithms/: algorithm.py
terminalmaze/algorithms/solve/: breadthfirst.py  greedybestfirst.py  solvealgorithm.py
terminalmaze/config/: __init__.py  conf.toml
terminalmaze/config/masks/: terminalmaze.mask  terminalmaze_bound.mask  terminalmaze_inverted.mask
terminalmaze/config/themes/: default.toml  gamergirl.toml  hacker.toml  hextoxterm.py
terminalmaze/resources/: cell.py  grid.py
terminalmaze/tools/: visualeffects.py  visualmaze.py
terminalmaze/visual/: colorterm.py  visualeffects.py  visualmaze.py
